build: remove slashes from the last lines of x86 build files
This unbreaks compilation in mingw with CRLF line endings

--- a/libavformat/Makefile
+++ b/libavformat/Makefile
@@ -568,4 +568,4 @@ TOOLS     = aviocat                                                     \
             pktdumper                                                   \
             probetest                                                   \
             seek_print                                                  \
-            sidxindex                                                   \
+            sidxindex
